<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_train"
        android:visible="false"
        android:icon="@drawable/volunteer_activism_24px"
        android:title="@string/training" />

    <item
        android:id="@+id/navigation_enrol"
        android:icon="@drawable/school_24px"
        android:title="@string/enrolment" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/event_24px"
        android:title="@string/event" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/info_24px"
        android:title="@string/contact_us" />

</menu>